--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2232,6 +2232,14 @@ input[type="text"]::-webkit-input-placeholder, textarea::-webkit-input-placehold
 
  }
 
+.feature {
+	padding: 10px;
+}
+
+.feature:hover {
+	background: #e2e2e2;
+	cursor: pointer;
+}
 
 /*---------------------------------------------------
 ------- Media Queries for Split Layout Ends ---------
